--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,6 +38,9 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Setup stats
+        env:
+          STEAM_ID: ${{ secrets.STEAM_ID }}
+          STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
         run: |
           ./setup-stats.bash
       - name: Build
