--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 STEAM_API_KEY="YOUR_STEAM_API_KEY"
 STEAM_ID="YOUR_STEAM_ID"
+
+DISCORD_BOT_KEY="YOUR_DISCORD_BOT_KEY"
+DISCORD_ID="YOUR_DISCORD_ID"
+
+GIT_API_KEY="YOUR_GITHUB_API_KEY"
