--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,27 +1,21 @@
 name: Deploy static content
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -29,14 +23,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "npm"
+
       - name: Install dependencies
         run: npm install
+
       - name: Setup stats
         env:
           STEAM_ID: ${{ secrets.STEAM_ID }}
@@ -46,20 +43,21 @@ jobs:
           GIT_API_KEY: ${{ secrets.GIT_API_KEY }}
         run: |
           bash setup-stats.sh
+
       - name: Build
-        run: |
-          npm run build
+        run: npm run build
+
       - name: Copy missing static files
-        run: |
-          # Allow all routes to be served by index.html
-          cp dist/index.html dist/404.html
+        run: cp dist/index.html dist/404.html
+
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
-          # Upload dist repository
           path: "./dist"
-      - name: Deploy to Github Pages
+
+      - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2
