--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,8 +3,9 @@ name: Deploy static content
 on:
   push:
     branches: ["main"]
-
-  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 1'  # Runs every monday at midnight UTC
+  workflow_dispatch:  # Allows manual triggering
 
 permissions:
   contents: read
