--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches: ["main"]
   schedule:
-    - cron: '0 0 * * 1'  # Runs every monday at midnight UTC
-  workflow_dispatch:  # Allows manual triggering
+    - cron: "0 0 * * 1" # Runs every monday at midnight UTC
+  workflow_dispatch: # Allows manual triggering
 
 permissions:
   contents: read
@@ -42,6 +42,7 @@ jobs:
           DISCORD_ID: ${{ secrets.DISCORD_ID }}
           DISCORD_BOT_KEY: ${{ secrets.DISCORD_BOT_KEY }}
           GIT_API_KEY: ${{ secrets.GIT_API_KEY }}
+          STEAM_PRIVATE_GAMES: ${{ secrets.STEAM_PRIVATE_GAMES }}
         run: |
           bash setup-stats.sh
 
